# PcapFlowLab

./: .gitignore  CMakeLists.txt  LICENSE  README.md
core/: open_context.h  open_progress.h
docs/: analysis-rate-graph-rfc.md  analysis-tab-rfc.md  analysis-tab.md  architecture.md  contributing.md  current-state.md  decisions.md  dissection-engine-parity-audit.md  dissection-engine-rfc.md  dissection-import-validation.md  large-capture-performance-guidelines.md  large-capture-rfc.md  large-file-read-optimization-plan.md  manual-release-publish-checklist-v0.1.0.md  manual-release-publish-checklist.md  next-steps.md  packet-read-path-analysis.md  protocol-recognition-stats-rfc.md  quic-fixture-01-reference.md  quic-fixture-02-reference.md  quic-initial-rfc.md  quic-stream-presentation-rfc.md  reassembly-rfc.md  release-checklist-v0.1.0.md  release-checklist.md  release-notes-draft.md  release-notes-v0.1.0-draft.md  roadmap.md  selected-flow-contract.md  selected-flow-packet-cache-rfc.md  selected-flow-scalability-rfc.md  stream-baseline-test-plan.md  stream_architecture.md  ui-improvement-backlog.md
docs/dev/: tauri_memory_investigation.md
docs/features/: Tauri_UI_spike.md  smart-export-per-flow-v1.md  smart-export-v1.md
docs/notes/: tauri_backend_boundary.md
docs/protocols/: overlay_inner_flow_tuple_branch.md  protocol_path_flow_identity.md  protocol_support.md
docs/ui/: frontend_dto_mapping.md  presentation_contract.md  tauri_qt_parity_audit.md
experimental/tauri-ui-spike/: README.md
experimental/tauri-ui-spike/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
experimental/tauri-ui-spike/src-tauri/.cargo/: config.toml
experimental/tauri-ui-spike/src-tauri/capabilities/: default.json
experimental/tauri-ui-spike/src-tauri/icons/: icon.icns
experimental/tauri-ui-spike/src-tauri/src/: dtos.rs  ffi.rs  lib.rs  main.rs
experimental/tauri-ui-spike/web/: index.html  main.js  styles.css
src/app/frontend/: FrontendDtos.h  FrontendSessionAdapter.cpp  FrontendSessionAdapter.h  FrontendSessionAdapterBridge.cpp  FrontendSessionAdapterBridge.h
src/app/session/: CaptureSession.cpp  CaptureSession.h  FlowRows.h  ProtocolPathPresentation.cpp  ProtocolPathPresentation.h  SelectedFlowDiagnostics.h  SelectedFlowPacketSemantics.cpp  SelectedFlowPacketSemantics.h  SessionFlowHelpers.cpp  SessionFlowHelpers.h  SessionFormatting.cpp  SessionFormatting.h  SessionHttpReconstruction.cpp  SessionHttpReconstruction.h  SessionOpenHelpers.cpp  SessionOpenHelpers.h  SessionQuicPresentation.cpp  SessionQuicPresentation.h  SessionTcpStreamSupport.cpp  SessionTcpStreamSupport.h  SessionTlsPresentation.cpp  SessionTlsPresentation.h
src/cli/: CliFormatting.cpp  CliFormatting.h  CliImportMode.h  main.cpp
src/core/: debug_logging.h  open_failure_info.h
src/core/decode/: PacketDecodeSupport.h  PacketDecoder.cpp  PacketDecoder.h
src/core/dissection/: CommonDirectDissection.cpp  CommonDirectDissection.h  DissectionEngine.cpp  DissectionEngine.h  DissectionRegistry.cpp  DissectionRegistry.h  DissectionTypes.h  PacketSlice.cpp  PacketSlice.h
src/core/domain/: CaptureState.h  CaptureSummary.cpp  CaptureSummary.h  Connection.cpp  Connection.h  ConnectionKey.cpp  ConnectionKey.h  ConnectionTable.cpp  ConnectionTable.h  Direction.h  Flow.cpp  Flow.h  FlowHints.h  FlowKey.cpp  FlowKey.h  IngestedPacket.h  PacketDetails.cpp  PacketDetails.h  PacketRef.cpp  PacketRef.h  ProtocolId.h  ProtocolPath.cpp  ProtocolPath.h
src/core/index/: CaptureIndex.cpp  CaptureIndex.h  CaptureIndexReader.cpp  CaptureIndexReader.h  CaptureIndexWriter.cpp  CaptureIndexWriter.h  ImportCheckpoint.cpp  ImportCheckpoint.h  ImportCheckpointReader.cpp  ImportCheckpointReader.h  ImportCheckpointWriter.cpp  ImportCheckpointWriter.h  Serialization.cpp  Serialization.h
src/core/io/: CaptureFilePacketReader.cpp  CaptureFilePacketReader.h  FileByteSource.cpp  FileByteSource.h  IByteSource.h  LinkType.h  PacketDataReader.cpp  PacketDataReader.h  PcapNgReader.cpp  PcapNgReader.h  PcapReader.cpp  PcapReader.h  PcapWriter.cpp  PcapWriter.h
src/core/reassembly/: ReassemblyService.cpp  ReassemblyService.h  ReassemblyTypes.h
src/core/services/: AnalysisSettings.h  CaptureImportApplication.cpp  CaptureImportApplication.h  CaptureImportPrefixPolicy.cpp  CaptureImportPrefixPolicy.h  CaptureImportProcessor.cpp  CaptureImportProcessor.h  CaptureImporter.cpp  CaptureImporter.h  ChunkedCaptureImporter.cpp  ChunkedCaptureImporter.h  DeepCaptureImporter.cpp  DeepCaptureImporter.h  DissectionImportAdapter.cpp  DissectionImportAdapter.h  DnsPacketProtocolAnalyzer.cpp  (+29 more)
tests/fixtures/: quic_fixture_01_expectations.json  quic_fixture_02_expectations.json
tests/ui/: MainControllerUiTests.cpp
tests/unit/: AhPcapFixtureTests.cpp  AnalysisSettingsTests.cpp  ArpPcapFixtureTests.cpp  ChunkedImportTests.cpp  CliImportModeTests.cpp  CommonDirectBoundsTraversalTests.cpp  CommonDirectCollectorTests.cpp  CommonDirectCoreDissectionTests.cpp  CommonDirectDissectionTestSupport.cpp  CommonDirectDissectionTestSupport.h  CommonDirectDissectionTests.cpp  CommonDirectEncapsulationDissectionTests.cpp  CommonDirectEoipDissectionTests.cpp  CommonDirectGeneveDissectionTests.cpp  CommonDirectGtpuDissectionTests.cpp  CommonDirectLinkDissectionTests.cpp  CommonDirectMplsPseudowireDissectionTests.cpp  CommonDirectNetworkDissectionTests.cpp  CommonDirectPathPolicyTests.cpp  CommonDirectRegistryEngineTests.cpp  CommonDirectTransportDissectionTests.cpp  CommonDirectVxlanDissectionTests.cpp  ConnectionTests.cpp  DissectionFoundationTests.cpp  DissectionImportAdapterTests.cpp  DissectionImportSessionParityTests.cpp  EoipPcapFixtureTests.cpp  EspPcapFixtureTests.cpp  ExportTests.cpp  FlowAnalysisTests.cpp  FlowHintsRawFixturesTests.cpp  FlowHintsRealFixturesTests.cpp  FlowHintsTests.cpp  FlowKeyTests.cpp  FragmentationTests.cpp  GenevePcapFixtureTests.cpp  GrePcapFixtureTests.cpp  GtpuPcapFixtureTests.cpp  IgmpPcapFixtureTests.cpp  ImportModeTests.cpp  (+42 more)
tools/import_validation/: ImportValidation.cpp  ImportValidation.h  ImportValidationDiagnostics.cpp  main.cpp
(+645 files in other folders)
